--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
-    
     "dependencies": {
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.7",
@@ -10,6 +9,7 @@
         "axios": "^0.21.4",
         "connected-react-router": "^6.9.1",
         "history": "^4.10.1",
+        "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.4",
